Grid Layout Bug Fix

--- a/public/styles/styles.less
+++ b/public/styles/styles.less
@@ -27,6 +27,12 @@
   padding: 10px;
 } 
 
+.grid-container1 {
+	display: grid;
+	grid-template-columns: auto auto;
+	padding: 10px;
+  } 
+
 #bug1 {
     border: 2px solid @red;
     padding: 10px;
